--- a/views/addEmail.ejs
+++ b/views/addEmail.ejs
@@ -29,8 +29,8 @@
       
       <label for="soldStatus">Sold Status:</label>
       <select id="soldStatus" name="soldStatus">
-        <option value="sold">Sold</option>
         <option value="not sold">Not Sold</option>
+       <option value="sold">Sold</option> 
         <option value="pake ytb">Pake Ytb</option>
         <option value="sold ytb">Sold Ytb</option>
       </select>
@@ -49,6 +49,12 @@
       <select id="ytbTrial" name="ytbTrial">
         <option value="on">ON</option>
         <option value="off" selected>OFF</option>
+    </select>
+    
+           <label for="status">Status:</label>
+      <select id="status" name="status">
+        <option value="fresh" selected>Fresh</option>
+        <option value="bekas" >Bekas</option>
       </select>
       
       <button type="submit">Add Emails</button>
